--- a/lectures/q2-13-04-23.tex
+++ b/lectures/q2-13-04-23.tex
@@ -8,9 +8,8 @@
 		=\mel{\psi_{\beta}^{0}}{S}{\psi_{\alpha}^{0}}
 	\end{dmath}
 \end{dgroup}
-\section{structure of $S$-matrix}
-$\to$ exercise 3 sheet 8
-\paragraph{or:}
+$\to$ exercise 3 sheet 8\\
+or
 \begin{dgroup}[]
 	\begin{dmath}[]
 		\ket{\psi_{\alpha}^{-}}-\ket{\psi_{\alpha}^{+}}=G^{-}
