--- a/lectures/q2-13-05-02.tex
+++ b/lectures/q2-13-05-02.tex
@@ -43,7 +43,7 @@ Transition rate $\frac{2\pi}{\hbar}\abs{T}^2\rho$
 cross section $\dv{\sigma}{\Omega}$ (final photon)\ldots
 
 
-\subsection{2nd order contribution}
+\paragraph{2nd order contribution}
 for $T_{\beta\alpha}$
 \begin{figure}[]
 	\begin{center}
