--- a/extrapackages.tex
+++ b/extrapackages.tex
@@ -63,7 +63,7 @@
 \usepackage{datetime}
 
 %% [OPT] Provides a \cancel{} command to stroke through mathematics.
-%\usepackage{cancel}
+\usepackage{cancel}
 
 %% [ADV] This allows for additional typesetting tools in
 %% mathmode. \mathclap{} will allow you to take away the width of a mathematical statement seen by LaTeX. Basically this packages adds features that lack in the AMSmath package.
@@ -96,6 +96,9 @@
 
 %% [?] This seems to allow us to define some additional counters.
 %\usepackage{etex}
+
+%[OPT] To write 1\textsuperscript as \nth{1} etc.
+\usepackage{nth}
 
 %% [ADV] XY-Pic to typeset some matrix-style graphics
 %\usepackage[all]{xy}
