--- a/macrosetup.tex
+++ b/macrosetup.tex
@@ -10,6 +10,7 @@
 %% like this.
 %\newcommand{\diff}[1]{\operatorname{d}\ifthenelse{\equal{#1}{}}{\,}{\!#1}}
 \newcommand{\dd}[1]{\operatorname{d}\ifthenelse{\equal{#1}{}}{\,}{\!#1}}
+\newcommand{\rd}{\mathrm d}
 
 %% Symbols for euler number and imaginary unit
 \providecommand*{\eu}%
@@ -28,6 +29,7 @@
 
 %% Additional mathematical operators
 %% Just use the physics package
+\DeclareMathOperator{\sgn}{tr}
 \DeclareMathOperator{\tr}{tr}
 \DeclareMathOperator{\id}{Id}
 \DeclareMathOperator{\arccot}{arccot}
@@ -57,8 +59,8 @@
 \newcommand{\ceil}[1]{\lceil #1 \rceil}
 \newcommand{\seq}[1]{\langle #1 \rangle}
 \newcommand{\set}[1]{\{ #1 \}}
-\newcommand{\abs}[1]{\lvert #1 \rvert}
-\newcommand{\norm}[1]{\lVert #1 \rVert}
+\newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
+\newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
 \newcommand{\indic}[1]{\bigl[#1\bigr]}
 \newcommand{\comm}[2]{\left[ {#1}, {#2} \right] }
 \newcommand{\acomm}[2]{\left\{ {#1}, {#2} \right\} }
@@ -80,6 +82,7 @@
 \newcommand{\pddv}[2]{\frac{\partial^{2} #1}{\partial #2 ^{2}}}
 \newcommand{\pddvm}[3]{\frac{\partial^{2} #1}{\partial #2 \partial #3}}
 \newcommand{\pdvn}[3]{\frac{\partial^{#1} #2}{\partial #3 ^{#1}}}
+\newcommand{\fdv}[2]{\frac{\delta #1}{\delta #2}}
 \newcommand{\vtr}[1]{\boldsymbol{\mathrm{#1}}}
 
 
