--- a/quantenmechanikii.tex
+++ b/quantenmechanikii.tex
@@ -41,6 +41,7 @@
 \input{layoutsetup}
 \input{theoremsetup}
 \input{macrosetup}
+\input{tikzstuff}
 
 
 %% Titlepage adjustments
@@ -63,7 +64,7 @@
 \author{Marc Maetz}
 
 %% The professor related to the document
-\professor{Mr.\ Adrian Signer}
+\professor{Prof.\ Adrian Signer}
 
 %% The term the document is made for
 \date{FS 2013}
@@ -98,6 +99,29 @@
 \Include{21}{02}{13}
 \Include{26}{02}{13}
 \Include{28}{02}{13}
+\Include{05}{03}{13}
+\Include{07}{03}{13}
+\Include{12}{03}{13}
+\Include{14}{03}{13}
+\Include{19}{03}{13}
+\Include{21}{03}{13}
+\Include{26}{03}{13}
+\Include{28}{03}{13}
+\Include{09}{04}{13}
+\Include{11}{04}{13}
+\Include{16}{04}{13}
+\Include{18}{04}{13}
+\Include{23}{04}{13}
+\Include{25}{04}{13}
+\Include{30}{04}{13}
+\Include{02}{05}{13}
+\Include{07}{05}{13}
+\Include{14}{05}{13}
+\Include{16}{05}{13}
+\Include{21}{05}{13}
+\Include{23}{05}{13}
+\Include{28}{05}{13}
+\Include{30}{05}{13}
 
 
 \newpage
