--- a/theoremsetup.tex
+++ b/theoremsetup.tex
@@ -33,6 +33,6 @@
 
 %% Proof environment with a small square as a "qed" symbol
 \theoremstyle{nonumberplain}
-\theoremsymbol{\ensuremath{\square}}
+%\theoremsymbol{\ensuremath{\square}}
 \newtheorem{proof}{Proof}
 %\neotheorem*{beweis}{Beweis}
