--- a/lectures/q2-13-03-07.tex
+++ b/lectures/q2-13-03-07.tex
@@ -98,12 +98,50 @@ $P$ is unitary since
 			P\ket{\psi}_S=\ket{\psi}_S
 		\end{dmath}
 		with $\ket{\psi}_S$ completely symmetric linear combination of all $N!$ Permutations.
-	\item totalli antisymmetric $\ket{\psi}_A$ with 
+	\item totally antisymmetric $\ket{\psi}_A$ with 
 		\begin{dmath}[]
 			P\ket{\psi}_A=\left( -1 \right)^P\ket{\psi}_A
 		\end{dmath}
 \end{enumerate}
-\ldots
+\paragraph{Example} $N=3$
+\begin{dgroup}[]
+	\begin{dmath}[]
+		\ket{\psi}_S=\frac{1}{\sqrt{3!}}\left( \psi\left( 1,2,3 \right)+\psi\left( 2,1,3 \right)+\psi\left( 1,3,2 \right)+\psi\left( 2,3,1 \right)+\psi\left( 3,1,2 \right)+\psi\left( 3,2,1 \right) \right)
+	\end{dmath}
+	\begin{dmath}[]
+		\ket{\psi}_A=\frac{1}{\sqrt{3!}}\left( \psi\left( 1,2,3 \right)+\psi\left( 2,3,1 \right)+\psi\left( 3,2,1 \right)-\psi\left( 2,1,3 \right)-\psi\left( 3,2,1 \right)-\psi\left( 1,3,2 \right) \right)
+	\end{dmath}
+\end{dgroup}
+\paragraph{spin-statistics theorem}
+particles with \emph{integer spin} (bosons) are described by \emph{symmetric} wave-functions\\
+particles with \emph{half-integer spin} (fermions) are described by \emph{antisymmetric} wave functions
+\begin{dgroup}[]
+	\begin{dsuspend}
+		Bosonic case:
+	\end{dsuspend}
+	\begin{dmath}[]
+		\psi_S\left( 1,\ldots,N \right)=\frac{1}{\sqrt{N!}}\sum_{p\in S_n}^{}\psi_1\left( P(1) \right)\ldots \psi_N\left( P(N) \right)
+	\end{dmath}
+	\begin{dsuspend}
+		fermionic case
+	\end{dsuspend}
+	\begin{dmath}[]
+		\psi_A\left( 1,\ldots,N \right)=\frac{1}{\sqrt{N!}}\sum_{p\in S_n}^{}\left( -1 \right)^P\psi_1\left( P(1) \right)\ldots \psi_N\left( P(N) \right)
+	\end{dmath}
+	\begin{dsuspend}
+		$\psi_A$ can be written as a Slater determinant
+	\end{dsuspend}
+	\begin{dmath}[]
+		\psi_A\left( 1,\ldots,N \right)=\frac{1}{\sqrt{N!}}\det
+		\begin{pmatrix}
+			\psi_1(1)&\cdots&\psi_1(N)\\
+			\vdots&\ddots&\vdots\\
+			\psi_N(1)&\cdots&\psi_N(N)
+		\end{pmatrix}
+	\end{dmath}
+\end{dgroup}
+\paragraph{Pauli exclusion principle}
+Two identical fermions (same quantum number, $\vtr{s}$,\ldots) cannot be at the same position. Wave function vanishes for $r_i,r_j;s_i=s_j,\cdots$. i.e. $1=2$ $\to$ Fermi gas.
 \section{Thomas-Fermi approximation}
 $\simeq$ semi classical: assume each electron feels average potential $\Phi(r)$, (spherically symmetric)
 \begin{dmath}[]
